--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,6 @@
   <!-- Fonts & Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
-
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   
   <style>
@@ -36,7 +35,6 @@
       width: 100%;
     }
 
-    /* Keep icon color in header white and no zoom on hover */
     .icon {
       color: #ffffff;
       font-size: 1.5rem;
@@ -46,17 +44,36 @@
       transform: scale(1.1);
     }
 
-    /* Prevent zooming out by scaling content to exactly one column */
-    /* The design is simplified for a vertical scroll experience */
+    /* Smooth fade-in on scroll styles */
+    .fade-section {
+      transition: opacity 0.8s ease, transform 0.8s ease;
+      opacity: 0;
+      transform: translateY(30px);
+    }
+    .fade-in {
+      opacity: 1 !important;
+      transform: translateY(0) !important;
+    }
   </style>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      // This is the mobile version, so no redirect needed.
+      // Intersection Observer for fade-in sections
+      const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('fade-in');
+          }
+        });
+      }, { threshold: 0.1 });
+
+      document.querySelectorAll('.fade-section').forEach(el => {
+        observer.observe(el);
+      });
     });
   </script>
 </head>
-<body class="overflow-x-hidden">
+<body class="overflow-x-hidden bg-white">
 
   <!-- Header -->
   <header class="bg-gradient-to-r from-[#0f609b] to-[#118f9d] text-white sticky top-0 z-50">
@@ -73,7 +90,6 @@
       <nav class="hidden md:flex space-x-4">
         <a href="index.html" class="nav-link font-medium text-white">Home</a>
         <a href="about.html" class="nav-link font-medium text-white">About</a>
-        <a href="products.html" class="nav-link font-medium text-white">Products</a>
         <a href="contact.html" class="nav-link font-medium text-white">Contact</a>
       </nav>
       <!-- Icons (hidden on mobile) -->
@@ -86,12 +102,11 @@
         </a>
       </div>
     </div>
-    <!-- Mobile dropdown -->
-    <div id="mobileMenu" class="hidden bg-[#118f9d]">
+    <!-- Mobile dropdown with transparent background -->
+    <div id="mobileMenu" class="hidden backdrop-blur-lg bg-black/40">
       <nav class="flex flex-col space-y-2 p-4 text-white">
         <a href="index.html" class="font-medium">Home</a>
         <a href="about.html" class="font-medium">About</a>
-        <a href="products.html" class="font-medium">Products</a>
         <a href="contact.html" class="font-medium">Contact</a>
         <div class="flex items-center space-x-4 pt-2">
           <a href="https://wa.me/+1234567890" target="_blank">
@@ -108,78 +123,25 @@
   <!-- Hero / Slideshow Section -->
   <section id="medicine-section" class="relative h-64 flex items-center justify-center text-center text-white" style="background-image: url('images/medicine.jpg'); background-size: cover; background-position: center;">
     <div class="absolute inset-0 bg-black bg-opacity-50"></div>
-    <div class="relative z-10 px-4">
+    <div class="relative z-10 px-4 fade-section">
       <h1 class="text-3xl font-bold">Stark International</h1>
       <p class="text-sm mt-2">A Partner to Trust</p>
       <a href="about.html" class="inline-block mt-4 px-3 py-2 bg-[#118f9d] text-white rounded text-sm font-semibold">Learn More</a>
     </div>
-    <!-- Arrows for slideshow (optional for mobile) -->
-    <button class="arrow left hidden absolute left-4 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-70 p-2 rounded" onclick="changeSlide(-1)">&#8249;</button>
-    <button class="arrow right hidden absolute right-4 top-1/2 transform -translate-y-1/2 bg-black bg-opacity-70 p-2 rounded" onclick="changeSlide(1)">&#8250;</button>
   </section>
 
   <!-- About / Intro Section -->
-  <section class="py-8 px-4">
+  <section class="py-8 px-4 fade-section">
     <h2 class="text-xl font-semibold text-[#67a955]">Pioneering Healthcare Solutions</h2>
     <h1 class="text-2xl font-bold mt-2">Transforming lives through innovation</h1>
     <p class="text-sm mt-4 text-gray-700 leading-relaxed">
-      Stark International stands as a trusted leader in pharmaceutical raw materials sourcing and distribution. We're committed to a customer-centric approach, revolutionizing the pharmaceutical landscape in the Middle East, and enhancing health for all.
+      Stark International stands as a trusted leader in pharmaceutical raw materials sourcing and distribution, committed to a customer-centric approach, revolutionizing the pharmaceutical landscape in the Middle East, and enhancing health for all.
     </p>
     <a href="contact.html" class="inline-block mt-4 px-4 py-2 bg-[#118f9d] text-white rounded text-sm font-semibold">Get in Touch</a>
   </section>
 
-  <!-- Products Overview -->
-  <section class="py-8 px-4 bg-gray-50">
-    <h2 class="text-2xl font-bold text-[#0f609b] text-center mb-6">Our Products</h2>
-    <div class="space-y-6">
-      <div class="bg-white p-4 rounded shadow">
-        <h3 class="text-xl font-semibold text-[#118f9d]">Pharmaceutical Ingredients (APIs)</h3>
-        <p class="text-sm mt-2 text-gray-700">High-quality APIs, globally compliant, fostering innovative drug development.</p>
-        <a href="aping.html" class="inline-block mt-4 px-3 py-2 bg-[#0f609b] text-white rounded text-sm font-semibold">Learn More</a>
-      </div>
-      <div class="bg-white p-4 rounded shadow">
-        <h3 class="text-xl font-semibold text-[#118f9d]">Excipients</h3>
-        <p class="text-sm mt-2 text-gray-700">Cost-effective, regulatory-approved excipients for top-tier drug formulations.</p>
-        <a href="excipients.html" class="inline-block mt-4 px-3 py-2 bg-[#0f609b] text-white rounded text-sm font-semibold">Learn More</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- Order Products Section -->
-  <section class="py-8 px-4 bg-[#f0f0f0]">
-    <h2 class="text-2xl font-bold text-center">Order Our Products</h2>
-    <p class="text-sm text-gray-700 mt-4 text-center leading-relaxed max-w-md mx-auto">
-      Since 2005, we've specialized in pharmaceutical ingredients and raw materials for top healthcare and personal care companies.
-    </p>
-    <div class="text-center mt-4">
-      <a href="contact.html" class="inline-block px-4 py-2 bg-[#118f9d] text-white rounded text-sm font-semibold">Contact Us and Order</a>
-    </div>
-  </section>
-
-  <!-- Statistics Section (Simplified for mobile) -->
-  <section class="py-8 px-4">
-    <h2 class="text-xl font-bold text-[#0f609b] text-center mb-6">Our Impact</h2>
-    <div class="grid grid-cols-1 gap-4 text-center">
-      <div class="bg-white p-4 rounded shadow">
-        <i class="fas fa-shopping-cart text-[#118f9d] text-2xl mb-2"></i>
-        <h3 class="text-lg font-semibold text-[#118f9d]">Users Bought This Month</h3>
-        <div class="text-2xl font-bold text-[#118f9d]" id="users-bought">0</div>
-      </div>
-      <div class="bg-white p-4 rounded shadow">
-        <i class="fas fa-users text-[#118f9d] text-2xl mb-2"></i>
-        <h3 class="text-lg font-semibold text-[#118f9d]">Trust This</h3>
-        <div class="text-2xl font-bold text-[#118f9d]" id="users-trust">0</div>
-      </div>
-      <div class="bg-white p-4 rounded shadow">
-        <i class="fas fa-box text-[#118f9d] text-2xl mb-2"></i>
-        <h3 class="text-lg font-semibold text-[#118f9d]">Items in Stock</h3>
-        <div class="text-2xl font-bold text-[#118f9d]" id="items-stock">0</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Details -->
-  <section class="py-8 px-4 bg-white">
+  <!-- Simple Contact Section -->
+  <section class="py-8 px-4 bg-white fade-section">
     <h2 class="text-2xl font-bold text-[#118f9d] text-center">Get in Touch</h2>
     <p class="text-sm text-gray-700 mt-2 text-center leading-relaxed max-w-md mx-auto">
       For inquiries and support, connect with us:
@@ -218,7 +180,6 @@
         <h3 class="font-bold text-lg mb-2">Quick Links</h3>
         <ul class="space-y-1 text-sm">
           <li><a href="about.html">About Us</a></li>
-          <li><a href="products.html">Products</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Terms of Service</a></li>
@@ -267,31 +228,6 @@
     setInterval(() => {
       changeSlide(1);
     }, 5000);
-
-    // Counters
-    function animateCounter(id, start, end, duration, callback) {
-      let obj = document.getElementById(id);
-      let range = end - start;
-      let increment = end > start ? 1 : -1;
-      let stepTime = Math.abs(Math.floor(duration / range));
-      let current = start;
-      let timer = setInterval(function () {
-        current += increment;
-        obj.textContent = current;
-        if (current == end) {
-          clearInterval(timer);
-          if (callback) callback();
-        }
-      }, stepTime);
-    }
-
-    window.onload = function() {
-      animateCounter("users-bought", 0, 1000, 50);
-      animateCounter("users-trust", 0, 4000000, 100, function() {
-        document.getElementById("users-trust").textContent = "It's endless!";
-      });
-      animateCounter("items-stock", 0, 5000, 50);
-    };
 
     // Mobile menu toggle
     const menuButton = document.getElementById('menuButton');
